# PLANAR

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: README.md  default.yaml  reproduce.yaml  research_top.yaml
docs/: EXXA_ALIGNMENT_CHECKLIST.md  architecture.md  conf.py  development.md  getting-started.md  index.md  reproducibility.md  scientific-notes.md
notebooks/: PLANAR_experiments.ipynb  README.md
reports/: PLANAR_REPORT.md  PLANAR_REPORT_new.md  PLANAR_REPORT_seed_42.md  PLANAR_REPORT_seed_43.md  PLANAR_REPORT_seed_44.md  README.md
scripts/: README.md  generate_synthetic_fits.py  run_pennyline_angle_encoding.py  run_planar.py
src/planar/: __init__.py  __main__.py  cli.py  config.py  data_loader.py  logging_utils.py  metrics.py  preprocessing.py  runtime.py  science_validation.py  transit_sim.py  visualization.py
src/planar/models/: __init__.py  autoencoder.py  clustering.py  transit_classifier.py
src/planar/pipelines/: __init__.py  autoencoder.py  clustering.py  full.py  inference.py  reporting.py  reproducibility.py  transit.py
tests/: conftest.py  test_clustering.py  test_data_loader.py  test_models.py
