[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planar"
version = "0.1.0"
description = "PLANAR: Planetary Latent Analysis & Representation for astrophysical ML pipelines"
readme = "README.md"
requires-python = "==3.11.9"
license = { text = "MIT" }
authors = [
  { name = "PLANAR Contributors" }
]
keywords = ["astrophysics", "machine-learning", "fits", "clustering", "autoencoder", "exoplanet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "astropy>=6.1.0",
  "hdbscan>=0.8.33",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pytorch-msssim>=1.0.0",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",
  "torch>=2.2.0",
  "umap-learn>=0.5.6"
]

[project.urls]
Homepage = "https://github.com/your-username/PLANAR"
Repository = "https://github.com/your-username/PLANAR"
Issues = "https://github.com/your-username/PLANAR/issues"

[project.scripts]
planar = "planar.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
